--- a/src/misc.F90.in
+++ b/src/misc.F90.in
@@ -315,3 +315,38 @@ recursive integer function igetsc(lunit) result(iret)
 
   return
 end function igetsc
+
+!> Check whether a specified mnemonic is a Table C operator supported by the NCEPLIBS-bufr software.
+!>
+!> @param nemo - Mnemonic
+!> @returns iokoper - Flag indicating whether nemo is a Table C operator supported by the NCEPLIBS-bufr software:
+!>    - 0 = No
+!>    - 1 = Yes
+!>
+!> @author J. Ator @date 2015-03-06
+integer function iokoper(nemo) result(iret)
+
+  implicit none
+
+  integer imrkopr
+
+  character*(*), intent(in) :: nemo
+
+  if ( len(nemo).lt.6 ) then
+    iret = 0
+  else if ( lge(nemo(1:3),'201') .and. lle(nemo(1:3),'208') ) then
+    iret = 1
+  else if ( nemo(1:3).eq.'221' ) then
+    iret = 1
+  else if ( ( ( nemo(4:6).eq.'000' ) .or. ( nemo(4:6).eq.'255' ) ) .and. &
+    ( ( nemo(1:3).eq.'237' ) .or. ( lge(nemo(1:3),'241') .and. lle(nemo(1:3),'243') ) ) ) then
+    iret = 1
+  else if ( ( nemo(4:6).eq.'000' ) .and. ( ( lge(nemo(1:3),'222') .and. lle(nemo(1:3),'225') ) .or. &
+    ( nemo(1:3).eq.'232' ) .or. ( nemo(1:3).eq.'235' ) .or. ( nemo(1:3).eq.'236' ) ) ) then
+    iret = 1
+  else
+    iret = imrkopr(nemo)
+  endif
+
+  return
+end function iokoper
