--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,10 +8,9 @@ list(APPEND fortran_src
   compress.F90 conwin.f copydata.F90 dumpdata.F90 dxtable.F90
   errwrt.F90 getwin.f fxy.F90 invcon.f invmrg.f invtag.f invwin.f
   jumplink.F90 mastertable.F90 missing.F90 mesgbc.f mesgbf.f mrginv.f
-  nevn.f newwin.f nvnwin.f nwords.f nxtwin.f openbt.F90
-  parstr.f parusr.f parutg.f cftbvs.F90
+  nevn.f newwin.f nvnwin.f nwords.f nxtwin.f openbt.F90 cftbvs.F90
   readwritemg.F90 readwritesb.F90 readwriteval.F90 rewnbf.f rsvfvm.f s013vals.F90 tankrcpt.F90
-  standard.F90 strcln.f string.f trybump.f ufbcup.f ufbevn.f ufbget.f ufbin3.f ufbinx.f
+  standard.F90 strings.F90 trybump.f ufbcup.f ufbevn.f ufbget.f ufbin3.f ufbinx.f
   memmsgs.F90 ufbovr.f ufbtab.f ciencode.F90 cidecode.F90 arallocf.F90 openclosebf.F90
   bufr_interface.F90 bufr_c2f_interface.F90 x4884.F90 bufrlib.F90)
 
